--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dotnet: none
 os:
  - windows
 script:
+ - choco install wget
  - choco install dotnetcore-sdk
  - choco install bazel
  - dotnet restore
